plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.10'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.kino'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'com.kino:commons:0.0.1-SNAPSHOT'
	implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.10'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.1.10'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.1.10'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.1.10'
	implementation 'org.springframework.boot:spring-boot-starter-cache:3.1.10'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.10'
	implementation 'org.springframework.session:spring-session-data-redis:3.1.5'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.10'
	implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.1.7'
	implementation 'org.apache.kafka:kafka-streams:3.4.1'
	runtimeOnly 'org.postgresql:postgresql:42.7.4'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.10'
	testImplementation 'org.springframework.amqp:spring-rabbit-test:3.0.12'
	testImplementation 'org.springframework.security:spring-security-test:6.1.8'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
}

tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
	useJUnitPlatform()
}
